# cspan_congressionalrhetoric_video

./: .gitignore  .gitmodules  FacesFramesDataset.py  LICENSE  README.md  crop_faces.py  faces_frames_dataset.py  mp_video.py  pyproject.toml  pyrightconfig.json  requirements.txt  test.py  video_preprocessing.py
.github/actions/setup-python-with-uv/: action.yml
.github/workflows/: pyright.yml  ruff.yml
facenet_pytorch/: __init__.py
facenet_pytorch/models/: mtcnn.py
preprocessing/: README.md  config.py  crop_faces.py  extract_frames.py  extract_pose.py  face_detector.py  frame_augmentation.py  optical_flow.py  preprocess.py  raft_optical_flow.py
sbatch/: preprocessing.sh  training.sh
scripts/: README.md  download-weights.py  label-videos.py  move-random-videos.py  move_random_videos.py  pip-uninstall.py  win-label-videos.py
training/: encoder.py  faces_frames_dataset.py  inferencer.py  losses.py  memory_bank.py  models.py  optimizer.py  pose_transforms.py  poses_dataset.py  prepare_data.py  requirements.txt  ssl.py  subset_data_multiplier.py  supervised.py  train.py  transforms.py  utils.py  video_augmentation.py
utils/: timer.py
visualization/: README.md  peek_faces.py
