[project]
name = "thedatamine-congressional-rhetoric-video"
version = "0.1.0"
description = "Code and resources for analyzing sentiment in congressional speeches using video data for The Data Mine 2025/2026 project."
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "filelock==3.19.1",
    "fsspec==2025.9.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.2.6",
    "opencv-contrib-python==4.12.0.88",
    "opencv-python==4.12.0.88",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "ruff==0.13.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]

[tool.ruff]
# Enable basic checks and import sorting
lint.select = ["E", "F", "I", "B", "ANN"]
