[project]
name = "thedatamine-congressional-rhetoric-video"
version = "0.1.0"
description = "Code and resources for analyzing sentiment in congressional speeches using video data for The Data Mine 2025/2026 project."
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "colorama==0.4.6",
    "numpy==2.2.6",
    "opencv-contrib-python==4.12.0.88",
    "opencv-python==4.12.0.88",
    "pandas==2.3.2",
    "requests==2.32.5",
    "scikit-learn>=1.8.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "ultralytics>=8.4.21",
]

[tool.ruff]
# Enable basic checks and import sorting
lint.select = ["E", "F", "I", "B", "ANN"]

[dependency-groups]
dev = ["pyright>=1.1.408", "python-vlc>=3.0.21203", "ruff==0.13.0"]
